syntax = "proto3";

option java_package = "com.mycronic.grpc";
package jServerInterface;

service user{
    rpc getMachinesDummy2(GetMachinesDummy2Cmd)  returns (GetMachinesDummy2Rsp);
    rpc login(LoginRequest)  returns (APIResponse);
    rpc logout(Empty)  returns (APIResponse);
}

message GetMachinesDummy2Cmd
{
      string machineFilter = 1;
      int32  maxNoMachines  = 2;
}

message GetMachinesDummy2Rsp
{
      string machines = 1;
}


message LoginRequest{
       string username = 1 ;
       string password = 2 ;
       string nicName = 3 ;
}

message APIResponse{
      string responsemessage = 1;
      int32  responseCode  = 2;
}

message Empty{
}
